# k-means-in-C

./: CMakeLists.txt  Makefile  README.md  help.c  help.h  kmeans.c  kmeans.h  kmeansopenmp.c  main.c  run.sh
datasets/sonar/: data.txt
src/: a.txt  help.c  help.h  kmeans-cuda  kmeans-omp-gpu.c  kmeans-omp-mpi  kmeans-omp-mpi.c  kmeans-openmp  kmeans-openmp.c  kmeans-sequencial  kmeans-sequencial.c  kmeans.c  kmeans.h  main.c  results.txt
